# healthstatus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
healthstatus/: __main__.py  cli.py  collectors.py  dashboard.py
src/: alerts.rs  collectors.rs  lib.rs  live.rs  logging.rs  main.rs  render.rs
tests/: formatting.rs
