[package]
name = "healthstatus"
version = "0.1.0"
edition = "2021"
description = "Live terminal dashboard for machine health."
license = "MIT"
readme = "README.md"
repository = "https://github.com/emilindqvist/healthstatus"
keywords = ["cli", "terminal", "monitoring", "system", "wsl"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.28"
ratatui = "0.29"

[[bin]]
name = "healthstatus"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
